--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
 PROXY_FIRST_PORT=10000
 PROXY_PORTS=26
-PROXY_HOSTNAME=usa.static.proxyrack.net
+PROXY_HOSTNAME=your.proxy.hostname
 PROXY_USERNAME=
 PROXY_PASSWORD=
 PROXY_SAME_HOSTNAME_SUCCESS_DELAY=
@@ -15,3 +15,4 @@ GITHUB_USERNAME=
 GITHUB_TOKEN=
 GITHUB_WEBHOOK_SECRET=
 API_KEY=
+DISCORD_WEBHOOK_URL=
